--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -9,9 +9,16 @@ html
 
     | !{cachify_js('/js/pi.min.js')}
 
+    pi-auth
     pi-app
 
     script#app-tpl(type="text/ng-template")
       include templates/app
+
+    script#auth-tpl(type="text/ng-template")
+      include templates/auth
+
+    script#explorer-tpl(type="text/ng-template")
+      include templates/explorer
 
     script(src="/socket.io/socket.io.js")
