--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -2,7 +2,7 @@ doctype html
 html
 head
     meta(charset='UTF-8')
-    title AdminLTE | Dashboard
+    title Pi | Dashboard
     meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
     link(href='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css', rel='stylesheet', type='text/css')
     link(href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css', rel='stylesheet', type='text/css')
@@ -187,7 +187,7 @@ head
               a.dropdown-toggle(href='#', data-toggle='dropdown')
                 i.glyphicon.glyphicon-user
                 span
-                  | Jane Doe
+                  | [Jane Doe]
                   i.caret
               ul.dropdown-menu
                 li.user-header.bg-light-blue
