--- a/client/views/explorer.jade
+++ b/client/views/explorer.jade
@@ -6,7 +6,7 @@ div
         span(class="input-group-btn")
           button(ng-click="createDir()", class="btn btn-info btn-flat") Go
     .col-xs-3
-      input(type="file", uploader="uploader", nv-file-select="", options="{formData: [{parent_id: dirService.current.id, client_id: userService.current.id}]}")
+      input(type="file", uploader="uploader", nv-file-select="", options="{formData: [{parent_id: directoryService.current.id, client_id: userService.current.id}]}")
 
   div
     .box
@@ -23,12 +23,12 @@ div
           th Progress
           th(style='width: 40px') StoreLevel
           th(style='width: 40px') IdxStoreLevel
-        tr(ng-show="dirService.current.parent_id")
+        tr(ng-show="directoryService.current.parent_id")
           td
           td
-            a(href="", ng-click="parent(dirService.current.parent_id)")
+            a(href="", ng-click="parent(directoryService.current.parent_id)")
               | ..
-        tr(ng-repeat="dir in dirService.current.child | orderBy:'name'")
+        tr(ng-repeat="dir in directoryService.current.child | orderBy:'name'")
           td {{dir.id}}.
           td(ng-if="dir.file")
             a(href="/api/1/files/{{dir.id}}" ng-if="dir.storeLevel && dir.piSize")
@@ -37,13 +37,13 @@ div
               | {{dir.name}}
           td(ng-if="!dir.file")
             a(href="", ng-click="enter(dir.id)")
-              {{ dir.name }}/
+              | {{ dir.name }}/
           td
             spawn(ng-if="dir.file")
-              {{dir.size}}
+              | {{dir.size}}
           td
             spawn(ng-if="dir.file")
-              {{dir.piSize}}
+              | {{dir.piSize}}
           td
             .progress.xs(ng-if="dir.percentage < 100")
               .progress-bar(ng-class="{'progress-bar-danger': dir.storeLevel === 4, 'progress-bar-yellow': dir.storeLevel === 3, 'progress-bar-green': dir.storeLevel === 2, 'progress-bar-light-blue': dir.storeLevel === 1 }", style='width: {{dir.percentage}}%')
@@ -52,17 +52,17 @@ div
           td
             span.badge(ng-class="{'bg-red': dir.idxStoreLevel === 5, 'bg-yellow': dir.idxStoreLevel === 4, 'bg-green': dir.idxStoreLevel === 3, 'bg-light-blue': dir.idxStoreLevel === 2 }") {{dir.idxStoreLevel}}
 
-        tr(ng-show="!dirService.current.child.length")
+        tr(ng-show="!directoryService.current.child.length")
           td
           td (Empty)
 
       div
-        | TotalSize : {{dirService.totalSize}}
-        | PiSize : {{dirService.piSize}}
+        | TotalSize : {{directoryService.totalSize}}
+        | PiSize : {{directoryService.piSize}}
 
-    //- a(href="", ng-click="parent(dirService.current.parent_id)", ng-show="dirService.current.parent_id")
+    //- a(href="", ng-click="parent(directoryService.current.parent_id)", ng-show="directoryService.current.parent_id")
     //-   | ..
-    //- div(ng-repeat="dir in dirService.current.child | orderBy:'name'")
+    //- div(ng-repeat="dir in directoryService.current.child | orderBy:'name'")
     //-   a(href="", ng-click="enter(dir.id)", ng-if="!dir.file")
     //-     | {{dir.name}}/
     //-   div(ng-if="dir.file")
@@ -70,5 +70,5 @@ div
     //-       | {{dir.name}} - {{dir.percentage}} %
     //-     a(href="/api/1/files/{{dir.id}}" ng-if="dir.percentage == 100")
     //-       | {{dir.name}}
-    //- div(ng-show="!dirService.current.child.length")
+    //- div(ng-show="!directoryService.current.child.length")
     //-   | (Empty)
