--- a/client/index.jade
+++ b/client/index.jade
@@ -256,4 +256,4 @@ html
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js', type='text/javascript')
 
     | !{cachify_js('/js/app_body.js')}
-    | !{modulator()}
+    | !{nodulator()}
