--- a/client/index.jade
+++ b/client/index.jade
@@ -226,9 +226,13 @@ html
           // sidebar menu: : style can be found in sidebar.less
           ul.sidebar-menu
             li.active
-              a(href='index.jade')
+              a(href)
                 i.fa.fa-dashboard
                 span Dashboard
+            li
+              a(onclick="window.open('/worker', 'lol', 'height=200,width=200');")
+                i.fa.fa-dashboard
+                span Worker
 
         // /.sidebar
       // Right side column. Contains the navbar and content of the page
