Updated Nodulator to latest version

--- a/client/auth.jade
+++ b/client/auth.jade
@@ -14,10 +14,7 @@ html.bg-black
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
       script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
-    script.
-      var __user = !{JSON.stringify(user)};
-
-  body.bg-black(ng-app="app")
+  body.bg-black
 
     h1
       center Pi
