--- a/client/index.jade
+++ b/client/index.jade
@@ -5,10 +5,8 @@ html
     title Pi | Dashboard
     meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
     // Ionicons
-    script.
-      var __user = !{JSON.stringify(user)};
 
-  body.skin-blue(ng-app="app")
+  body.skin-blue
     // header logo: style can be found in header.less
     header.header
       a.logo(href='index.jade')
