--- a/client/views/auth.jade
+++ b/client/views/auth.jade
@@ -7,7 +7,7 @@ div
           .form-group
             input.form-control(type='text', ng-model='ident.login', placeholder='Login')
           .form-group
-            input.form-control(type='password', name='ident.pass', placeholder='Password')
+            input.form-control(type='password', ng-model='ident.pass', placeholder='Password')
           .form-group
             input(type='checkbox', name='remember_me')
             |  Remember me
