--- a/client/views/explorer.jade
+++ b/client/views/explorer.jade
@@ -21,9 +21,9 @@ div
           th Size
           th Size In Pi
           //- th %
-          th Progress
-          th(style='width: 40px') StoreLevel
-          th(style='width: 40px') IdxStoreLevel
+          //- th Progress
+          //- th(style='width: 40px') StoreLevel
+          //- th(style='width: 40px') IdxStoreLevel
         tr(ng-show="directoryService.current.parent_id")
           td
           td
@@ -47,13 +47,13 @@ div
               | {{dir.piSize}}
           //- td
           //-   spawn(ng-if="dir.percentage < 100")
-          td
+          //- td
             | {{dir.percentage}}%
             .progress.xs(ng-if="dir.percentage < 100")
               .progress-bar(ng-class="{'progress-bar-danger': dir.storeLevel === 4, 'progress-bar-yellow': dir.storeLevel === 3, 'progress-bar-green': dir.storeLevel === 2, 'progress-bar-light-blue': dir.storeLevel === 1 }", style='width: {{dir.percentage}}%')
-          td
+          //- td
             span.badge(ng-class="{'bg-red': dir.storeLevel === 5, 'bg-yellow': dir.storeLevel === 4, 'bg-green': dir.storeLevel === 3, 'bg-light-blue': dir.storeLevel === 2 }") {{dir.storeLevel}}
-          td
+          //- td
             span.badge(ng-class="{'bg-red': dir.idxStoreLevel === 5, 'bg-yellow': dir.idxStoreLevel === 4, 'bg-green': dir.idxStoreLevel === 3, 'bg-light-blue': dir.idxStoreLevel === 2 }") {{dir.idxStoreLevel}}
 
         tr(ng-show="!directoryService.current.child.length")
