--- a/client/index.jade
+++ b/client/index.jade
@@ -217,10 +217,10 @@ html
               a(href)
                 i.fa.fa-dashboard
                 span Dashboard
-            li
-              a(href, onclick="window.open('/worker', 'lol', 'height=387,width=641');")
-                i.fa.fa-dashboard
-                span Worker
+            // li
+              // a(href, onclick="window.open('/worker', 'lol', 'height=387,width=641');")
+                // i.fa.fa-dashboard
+                // span Worker
 
         // /.sidebar
       // Right side column. Contains the navbar and content of the page
